--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        {% block encabezado %}{% endblock %} <!-- Bloque para encabezado de la página -->
+        {% block encabezado %}Holy{% endblock %} <!-- Bloque para encabezado de la página -->
         {% block navbar %}{% endblock %}     <!-- Bloque para el menu de navegación de la página -->
         {% block mensajes %}{% endblock %}   <!-- Bloque para mostrar mensajes de la página -->
         {% block contenido %}{% endblock %}  <!-- Bloque para el contenido de la página -->
